# dispman

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
man/: dispman.1  footer.1
scoop/: display-cli.json  dispman.json
src/: capabilities.rs  cli.rs  config.rs  ddc.rs  display.rs  error.rs  lib.rs  main.rs  vcp.rs
src/backend/: macos.rs  mod.rs  windows.rs
