[package]
name = "dispman"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "Control monitor settings via DDC/CI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/msetsma/dispman"
homepage = "https://github.com/msetsma/dispman"
authors = ["Mitchell Setsma"]
keywords = ["ddc", "ddc-ci", "monitor", "display", "vcp"]
categories = ["command-line-utilities", "hardware-support"]

[build-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_mangen = "0.2"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Devices_Display", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "macos")'.dependencies]
ddc = "0.2"
ddc-macos = "0.2.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
